# car-price-prediction-api

./: .gitignore  README.md  pyproject.toml  scrap_on.py
notebook/: EDA.ipynb  presentation.ipynb
src/: preprocessing.py  scrap.py
