[tool.poetry]
name = "car-price-prediction-project"
version = "0.1.0"
description = "car price prediction task, web-scraping from local Kg site and then analyze, provide EDA and best model"
authors = ["Aidin <aidinror@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.1.1"
aiohttp = "^3.10.6"
selenium = "^4.25.0"
pandas = "^2.2.3"
lxml = "^5.3.0"
autoreload = "^0.1.2"
ipython = "^8.27.0"
ipykernel = "^6.29.5"
aiohappyeyeballs = "^2.4.2"
scikit-learn = "^1.5.2"
tensorflow = "^2.17.0"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
